Expand on lsp test snippets

--- a/test/test.html
+++ b/test/test.html
@@ -1,1 +1,13 @@
-<div></div>
+<div>
+    <h1>Testing stuff out</h1>
+    <div class="main">
+        <a href="#"></a>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+    </div>
+</div>
